--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   profiles:
     active: local
+  config:
+    import:
+      - classpath:/yaml/application-local.yml
+      - classpath:/yaml/application-prod.yml
