--- a/backend/src/main/resources/yaml/application-local.yml
+++ b/backend/src/main/resources/yaml/application-local.yml
@@ -1,17 +1,11 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:database;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:postgresql://localhost:5432/aniwhere
     username: satoru
-    password:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    password: gozo
+    driver-class-name: org.postgresql.Driver
+
   jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+    show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
