--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -5,7 +5,14 @@ spring:
     password: gozo
     driver-class-name: org.postgresql.Driver
 
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   jpa:
-    show-sql: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
