docs: Android CI path 적용

--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,8 +3,12 @@ name: YaguBogu Android CI
 on:
   push:
     branches: [ "dev-an" ]
+    paths:
+      - 'android/**'
   pull_request:
     branches: [ "dev-an" ]
+    paths:
+      - 'android/**'
 
 jobs:
   build:
