--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -13,8 +13,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+      
+    defaults:
+      run:
+        working-directory: android
 
     steps:
     - uses: actions/checkout@v4
