--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -11,7 +11,7 @@ on:
 # 1. 배포
 jobs:
   build:
-    uses: backend-ci.yml
+    uses: ./.github/workflows/backend-ci.yml
     secrets: inherit
 
   deploy:
@@ -30,4 +30,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             sudo fuser -k -n tcp 80 || true
-            sudo nohup java -jar ./backend-build.jar > ./output.log 2>&1 &
+            sudo nohup java -jar /home/ubuntu/backend-build.jar > /home/ubuntu/output.log 2>&1 &
