--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:database;
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: sa
+    password:
   h2:
     console:
       enabled: true
