--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -67,6 +67,7 @@ jobs:
             -Dspring.datasource.username="$DB_USERNAME" \
             -Dspring.datasource.password="$DB_PASSWORD" \
             -Dspring.profiles.active=prod \
+            -Dserver.port=80 \
             -jar ./backend-build.jar >> output.log 2>&1 &
           
           sleep 5
