--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,5 +13,12 @@ spring:
 spring:
   config:
     activate:
+      on-profile: dev
+    import: classpath:/yaml/application-dev.yml
+
+---
+spring:
+  config:
+    activate:
       on-profile: prod
     import: classpath:/yaml/application-prod.yml
