chore: 개발시(dev, local) ddl_auto 옵션 create로 선택
- create-drop은 테스트에서만 사용한다.

--- a/backend/src/main/resources/yaml/application-dev.yml
+++ b/backend/src/main/resources/yaml/application-dev.yml
@@ -16,5 +16,5 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     defer-datasource-initialization: true
