--- a/backend/src/main/resources/yaml/application-local.yml
+++ b/backend/src/main/resources/yaml/application-local.yml
@@ -16,5 +16,5 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     defer-datasource-initialization: true
