chore: yaml 디렉터리 제거 및 설정 파일 위치 정리

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,18 +7,18 @@ spring:
   config:
     activate:
       on-profile: local
-    import: classpath:/yaml/application-local.yml
+    import: classpath:/application-local.yml
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
-    import: classpath:/yaml/application-dev.yml
+    import: classpath:/application-dev.yml
 
 ---
 spring:
   config:
     activate:
       on-profile: prod
-    import: classpath:/yaml/application-prod.yml
+    import: classpath:/application-prod.yml
