--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -18,3 +18,10 @@ spring:
     hibernate:
       ddl-auto: create
     defer-datasource-initialization: true
+
+  api:
+    kbo:
+      base-url: https://www.koreabaseball.com/ws/Main.asmx
+      connect-timeout: 5s
+      read-timeout: 30s
+      content-type: application/x-www-form-urlencoded; charset=UTF-8
