--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -12,3 +12,10 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: validate
+
+  api:
+    kbo:
+      base-url: https://www.koreabaseball.com/ws/Main.asmx
+      connect-timeout: 5s
+      read-timeout: 30s
+      content-type: application/x-www-form-urlencoded; charset=UTF-8
