fix: 환경변수 매핑 안되는 문제 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,13 @@ spring:
   profiles:
     active: local
 
+api:
+  kbo:
+    base-url: https://www.koreabaseball.com/ws/Main.asmx
+    connect-timeout: 5s
+    read-timeout: 30s
+    content-type: application/x-www-form-urlencoded; charset=UTF-8
+
 ---
 spring:
   config:
