--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,6 +7,8 @@ oauth:
     base-uri: 'https://oauth2.googleapis.com'
     token-info-uri: '/tokeninfo'
     client-id: ${GOOGLE_CLIENT_ID}
+    connect-timeout: 2s
+    read-timeout: 30s
 
 security:
   jwt:
