Dev-be -> Dev (#170)
* chore: springdoc 버전 2.7.0으로 수정

* feat: 응원팀 조회 기능 구현

* feat: 구장별 팬 점유율 조회 기능 구현

- name -> short_name

* feat: 구장별 팬 점유율 조회 시 응답 데이터 추가 (#107)

* chore: Discord PR 알림 기능 추가

* fix: 알림 조건을 대상 브랜치를 대상으로 수정

* fix: json 파싱 방식 수정

* chore: 출력 메시지에 줄바꿈 수정

* chore: Discord 알림 케이스 추가

* chore: pr merge시 issue 닫는 workflow 추가

* chore: 이슈 설정 workflow 추가

* chore: pr 설정 workflow 추가

* chore: assignee 기반으로 라벨 붙도록 수정

* chore: yaml 디렉터리 제거 및 설정 파일 위치 정리

* chore: import 제거

* feat: 인증한 직관 내역을 최신순으로 조회하는 기능 구현

* test: static import로 수정

* test: DisplayName 수정

* test: 코드 컨벤션 반영

- DisplayName에 온점 삭제

* refactor: dto 이름 수정

- TeamInfoResponse -> CheckInGameTeamResponse

* refactor: dto 이름 수정

- CheckInResponse -> CheckInGameResponse

* feat: 직관 승리 내역 조회 기능 구현

* feat: 야구 경기 일정 크롤링 및 저장 기능 구현

* feat: team에 TeamCode 컬럼 추가

* style: 코드컨밴션에 맞게 개행

* feat: stadium 조회 시 shortName으로 조회하도록 수정

* refactor: code에 npe 가능성 개선

* style: 컨밴션 적용

* refactor: KboClientResponse에 필드 명 명확하게 수정

* style: 상수 초기화 맨 위로 이동

* refactor: 직관 내역 조회 기능 수정

- result Query Parameter 추가
- filter 추가로 인해 API 하나로 관리

* test: given절 개행 삭제

* feat: 연도 필터링 기능 추가

- 기존에는 연도 필터링이 되어 있지 않았음

* feat: 예외에 cause 추가

* refactor: KboClientException에서 ClientException으로 클래스 명 수정

* refactor: KboGameInfoDto에서 KboGameDto로 수정

* refactor: KboRestClient의 설정 값 환경 파일로 분리

* style: 개행 추가

* fix: 환경변수 매핑 안되는 문제 수정

* feat: jwt 토큰 생성 기능 구현

* feat: 회원가입/로그인 통합 기능 구현

* refactor: Dto명, Config클래스 명 수정

- ClientConfig -> KboClientConfig
- KboGameDto -> KboGameResponse

* test: 오타 수정

* test: 테스트 목적을 DisplayName 표현

- 정렬 + 값 검증임을 드러냄.

* feat: 코드 리뷰 반영

* refactor: 응답, 토큰 검증 로직 일반화

* test: 어노테이션 순서 변경

* refactor: 코드 리뷰 반영

* refactor: MemberInfo -> MemberClaims로 변경

* refactor: 불필요한 어노테이션 제거

* refactor: 어노테이션 순서 변경

* fix: 회원가입여부 반대로 반환되는 문제 수정

* refactor: 응답 데이터명 수정

* test: 테스트 주석 수정

* test: 테스트 메서드명 수정

* test: refreshToken 설정값 버그 수정

* feat: 토큰 검증시 중복 검증 제거

* test: 유효하지 않은 토큰(위조 토큰)에 대한 테스트 추가

* chore:

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,23 +2,44 @@ spring:
   profiles:
     active: local
 
+oauth:
+  google:
+    base-uri: 'https://oauth2.googleapis.com'
+    token-info-uri: '/tokeninfo'
+    client-id: ${GOOGLE_CLIENT_ID}
+    connect-timeout: 180s # 3분
+    read-timeout: 180s
+
+security:
+  jwt:
+    access-token:
+      secret-key: ${JWT_ACCESS_TOKEN_SECRET_KEY}
+      expire-length: 900      # 15분 (초)
+    refresh-token:
+      secret-key: ${JWT_REFRESH_TOKEN_SECRET_KEY}
+      expire-length: 1209600  # 14일 (초)
+
+api:
+  kbo:
+    base-url: https://www.koreabaseball.com/ws/Main.asmx
+    connect-timeout: 5s
+    read-timeout: 30s
+    content-type: application/x-www-form-urlencoded; charset=UTF-8
+
 ---
 spring:
   config:
     activate:
       on-profile: local
-    import: classpath:/yaml/application-local.yml
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
-    import: classpath:/yaml/application-dev.yml
 
 ---
 spring:
   config:
     activate:
       on-profile: prod
-    import: classpath:/yaml/application-prod.yml
