--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -16,3 +16,27 @@ spring:
     hibernate:
       ddl-auto: create-drop
     defer-datasource-initialization: true
+
+oauth:
+  google:
+    base-uri: 'https://oauth2.googleapis.com'
+    token-info-uri: '/tokeninfo'
+    client-id: 'this-is-client-id'
+    connect-timeout: 180s # 3분
+    read-timeout: 180s
+
+security:
+  jwt:
+    access-token:
+      secret-key: this-is-secret-key
+      expire-length: 900      # 15분 (초)
+    refresh-token:
+      secret-key: this-is-secret-key
+      expire-length: 1209600  # 14일 (초)
+
+api:
+  kbo:
+    base-url: https://www.koreabaseball.com/ws/Main.asmx
+    connect-timeout: 5s
+    read-timeout: 30s
+    content-type: application/x-www-form-urlencoded; charset=UTF-8
