feat: 야구 경기 결과 크롤링 및 저장 기능 구현

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 
 api:
   kbo:
-    base-url: https://www.koreabaseball.com/ws/Main.asmx
+    base-url: https://www.koreabaseball.com/ws
     connect-timeout: 5s
     read-timeout: 30s
     content-type: application/x-www-form-urlencoded; charset=UTF-8
