feat: 현장톡 채팅 액티비티 추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,11 +19,15 @@
         android:theme="@style/Theme.YaguBogu"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.livetalk.LivetalkChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
