refactor: expire-length -> expires-in으로 수정

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -29,10 +29,10 @@ security:
   jwt:
     access-token:
       secret-key: this-is-secret-key
-      expire-length: 900      # 15분 (초)
+      expires-in: 900      # 15분 (초)
     refresh-token:
       secret-key: this-is-secret-key
-      expire-length: 1209600  # 14일 (초)
+      expires-in: 1209600  # 14일 (초)
 
 api:
   kbo:
