--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.livetalk.LivetalkChatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="true"
