--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Clean build with Gradle
+      run: ./gradlew clean build
 
     - name: Run ktlint check
       run: ./gradlew ktlintCheck
