--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -32,7 +32,9 @@ jobs:
       run: chmod +x gradlew
 
     - name: Create google-services.json
-      run: echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/app/src/debug/google-services.json
+      run: |
+        mkdir -p ./app/src/debug
+        echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' > ./app/src/debug/google-services.json
 
     - name: Clean build with Gradle
       run: ./gradlew clean build
