--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -34,9 +34,7 @@ jobs:
     - name: Create google-services.json
       run: |
         mkdir -p app/src/debug
-        cat <<EOF > app/src/debug/google-services.json
-        ${{ secrets.GOOGLE_SERVICE_JSON }}
-        EOF
+        echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 --decode > ./app/src/debug/google-services.json
 
     - name: Clean build with Gradle
       run: ./gradlew clean build
