--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -31,10 +31,15 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Create google-services.json
+    - name: Create google-services.json for debug
       run: |
-        mkdir -p app/src/debug
-        echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 --decode > ./app/src/debug/google-services.json
+        mkdir -p ./app/src/debug
+        echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' > ./app/src/debug/google-services.json
+    
+    - name: Create google-services.json for release
+      run: |
+        mkdir -p ./app
+        echo '${{ secrets.GOOGLE_SERVICES_JSON_RELEASE }}' > ./app/google-services.json
 
     - name: Clean build with Gradle
       run: ./gradlew clean build
