--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -26,7 +26,7 @@ oauth:
     read-timeout: 180s
 
 security:
-  jwt:
+  token:
     access-token:
       secret-key: this-is-secret-key
       expires-in: 900      # 15분 (초)
