feat: token 재발급 기능 구현 (#183)
* feat: refresh token 재발급 기능 구현

* refactor: 메서드명 수정

* refactor: 정적 팩토리 메서드 사용하도록 수정

* refactor: dto명 수정

* refactor: 메서드명 수정

* test: hasMessageContaining -> hasMessage로 변경

- 에러 메세지가 정확하게 일치하는 것을 검증한다.

* refactor: 메서드 반환값 반대로 수정

- 항상 !isValid()를 사용하므로 isInvalid로 메서드를 수정한다.

* refactor: expire-length -> expires-in으로 수정

* refactor: jwt -> token 변수명 및 메서드명 수정

* test: isInstanceOf -> isExactlyInstanceOf로 수정

* refactor: dto명 변경

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -26,13 +26,13 @@ oauth:
     read-timeout: 180s
 
 security:
-  jwt:
+  token:
     access-token:
       secret-key: this-is-secret-key
-      expire-length: 900      # 15분 (초)
+      expires-in: 900      # 15분 (초)
     refresh-token:
       secret-key: this-is-secret-key
-      expire-length: 1209600  # 14일 (초)
+      expires-in: 1209600  # 14일 (초)
 
 api:
   kbo:
