--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,13 +11,13 @@ oauth:
     read-timeout: 180s
 
 security:
-  jwt:
+  token:
     access-token:
-      secret-key: ${JWT_ACCESS_TOKEN_SECRET_KEY}
-      expire-length: 900      # 15분 (초)
+      secret-key: ${ACCESS_TOKEN_SECRET_KEY}
+      expires-in: 900      # 15분 (초)
     refresh-token:
-      secret-key: ${JWT_REFRESH_TOKEN_SECRET_KEY}
-      expire-length: 1209600  # 14일 (초)
+      secret-key: ${REFRESH_TOKEN_SECRET_KEY}
+      expires-in: 1209600  # 14일 (초)
 
 api:
   kbo:
