chore: 토큰 유효기간 변경

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,7 +14,7 @@ security:
   token:
     access-token:
       secret-key: ${ACCESS_TOKEN_SECRET_KEY}
-      expires-in: 900      # 15분 (초)
+      expires-in: 1209600      # 14일 (초)
     refresh-token:
       secret-key: ${REFRESH_TOKEN_SECRET_KEY}
       expires-in: 1209600  # 14일 (초)
