chore: 헬스 체크 의존성 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,6 +26,12 @@ api:
     read-timeout: 30s
     content-type: application/x-www-form-urlencoded; charset=UTF-8
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+
 ---
 spring:
   config:
